data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
typedef enum {
    OSAL_THREAD_PRI_LOW,
    OSAL_THREAD_PRI_DEFAULT,
    OSAL_THREAD_PRI_HIGH,
    OSAL_THREAD_PRI_HIGHEST
} OSAL_THREAD_PRIORITY;
struct OsalThreadParam {
    char *name;
    size_t stackSize;
    OSAL_THREAD_PRIORITY priority;
    int policy;
};
typedef int (*OsalThreadEntry)(void *);
struct OsalThread {
    void *realThread;
};
int32_t OsalThreadCreate(struct OsalThread *thread, OsalThreadEntry threadEntry, void *entryPara);
int32_t OsalThreadStart(struct OsalThread *thread, const struct OsalThreadParam *param);
int32_t OsalThreadDestroy(struct OsalThread *thread);
typedef unsigned int UINT32;
typedef UINT32 size_t;