data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/sapm__193cdeb43a97/.c2r_bindgen_extern/audio_sapm_4672dfb0.externs.rs

pub const AUDIO_SAPM_INPUT: AudioSapmType = 0;
pub const AUDIO_SAPM_OUTPUT: AudioSapmType = 1;
pub const AUDIO_SAPM_MUX: AudioSapmType = 2;
pub const AUDIO_SAPM_DEMUX: AudioSapmType = 3;
pub const AUDIO_SAPM_VIRT_MUX: AudioSapmType = 4;
pub const AUDIO_SAPM_VALUE_MUX: AudioSapmType = 5;
pub const AUDIO_SAPM_MIXER: AudioSapmType = 6;
pub const AUDIO_SAPM_MIXER_NAMED_CTRL: AudioSapmType = 7;
pub const AUDIO_SAPM_PGA: AudioSapmType = 8;
pub const AUDIO_SAPM_OUT_DRV: AudioSapmType = 9;
pub const AUDIO_SAPM_ADC: AudioSapmType = 10;
pub const AUDIO_SAPM_DAC: AudioSapmType = 11;
pub const AUDIO_SAPM_MICBIAS: AudioSapmType = 12;
pub const AUDIO_SAPM_MIC: AudioSapmType = 13;
pub const AUDIO_SAPM_HP: AudioSapmType = 14;
pub const AUDIO_SAPM_SPK: AudioSapmType = 15;
pub const AUDIO_SAPM_LINE: AudioSapmType = 16;
pub const AUDIO_SAPM_ANALOG_SWITCH: AudioSapmType = 17;
pub const AUDIO_SAPM_VMID: AudioSapmType = 18;
pub const AUDIO_SAPM_PRE: AudioSapmType = 19;
pub const AUDIO_SAPM_POST: AudioSapmType = 20;
pub const AUDIO_SAPM_SUPPLY: AudioSapmType = 21;
pub const AUDIO_SAPM_REGULATOR_SUPPLY: AudioSapmType = 22;
pub const AUDIO_SAPM_CLOCK_SUPPLY: AudioSapmType = 23;
pub const AUDIO_SAPM_AIF_IN: AudioSapmType = 24;
pub const AUDIO_SAPM_AIF_OUT: AudioSapmType = 25;
pub const AUDIO_SAPM_SIGGEN: AudioSapmType = 26;
pub const AUDIO_SAPM_SINK: AudioSapmType = 27;
pub type AudioSapmType = ::core::ffi::c_uint;
pub const AUDIO_BIAS_OFF: AudioBiasLevel = 0;
pub const AUDIO_BIAS_STANDBY: AudioBiasLevel = 1;
pub const AUDIO_BIAS_PREPARE: AudioBiasLevel = 2;
pub const AUDIO_BIAS_ON: AudioBiasLevel = 3;
pub type AudioBiasLevel = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioSapmContext {
    pub componentNum: i32,
    pub biasLevel: AudioBiasLevel,
    pub suspendBiasLevel: AudioBiasLevel,
    pub codec: *mut CodecDevice,
    pub platform: *mut PlatformDevice,
    pub card: *mut AudioCard,
    pub targetBiasLevel: AudioBiasLevel,
    pub list: DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioSapmComponent {
    pub sapmType: AudioSapmType,
    pub componentName: *mut ::core::ffi::c_char,
    pub streamName: *mut ::core::ffi::c_char,
    pub sapm: *mut AudioSapmContext,
    pub codec: *mut CodecDevice,
    pub platform: *mut PlatformDevice,
    pub reg: u32,
    pub shift: u8,
    pub invert: u8,
    pub mask: u32,
    pub connected: u8,
    pub external: u8,
    pub active: u8,
    pub newPower: u8,
    pub power: u8,
    pub newCpt: u8,
    pub eventFlags: u16,
    pub Event: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut AudioSapmComponent,
            arg2: *mut AudioKcontrol,
            arg3: i32,
        ) -> i32,
    >,
    pub PowerCheck:
        ::core::option::Option<unsafe extern "C" fn(arg1: *const AudioSapmComponent) -> i32>,
    pub kcontrolsNum: i32,
    pub kcontrolNews: *mut AudioKcontrol,
    pub kcontrols: *mut *mut AudioKcontrol,
    pub list: DListHead,
    pub sources: DListHead,
    pub sinks: DListHead,
    pub powerList: DListHead,
    pub dirty: DListHead,
    pub PowerClockOp:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut AudioSapmComponent) -> i32>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioSapmRoute {
    pub sink: *const ::core::ffi::c_char,
    pub control: *const ::core::ffi::c_char,
    pub source: *const ::core::ffi::c_char,
    pub Connected: ::core::option::Option<
        unsafe extern "C" fn(source: *mut AudioSapmComponent, sink: *mut AudioSapmComponent) -> u32,
    >,
}
unsafe extern "C" {
    pub fn OsalSleep(sec: u32);
}
pub const OSAL_THREAD_PRI_LOW: OSAL_THREAD_PRIORITY = 0;
pub const OSAL_THREAD_PRI_DEFAULT: OSAL_THREAD_PRIORITY = 1;
pub const OSAL_THREAD_PRI_HIGH: OSAL_THREAD_PRIORITY = 2;
pub const OSAL_THREAD_PRI_HIGHEST: OSAL_THREAD_PRIORITY = 3;
pub type OSAL_THREAD_PRIORITY = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalThreadParam {
    pub name: *mut ::core::ffi::c_char,
    pub stackSize: size_t,
    pub priority: OSAL_THREAD_PRIORITY,
    pub policy: ::core::ffi::c_int,
}
pub type OsalThreadEntry = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void) -> ::core::ffi::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalThread {
    pub realThread: *mut ::core::ffi::c_void,
}
unsafe extern "C" {
    pub fn OsalThreadCreate(
        thread: *mut OsalThread,
        threadEntry: OsalThreadEntry,
        entryPara: *mut ::core::ffi::c_void,
    ) -> i32;
}
unsafe extern "C" {
    pub fn OsalThreadStart(thread: *mut OsalThread, param: *const OsalThreadParam) -> i32;
}
unsafe extern "C" {
    pub fn OsalThreadDestroy(thread: *mut OsalThread) -> i32;
}
